--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,6 +11,9 @@ main:
   - title: "Publications"
     url: /publications/
 
+  - title: "Experience"
+    url: /portfolio/ 
+
   - title: "Teaching"
     url: /teaching/    
     
