--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,7 +18,7 @@ main:
     url: /teaching/    
     
   - title: "CV"
-    url: /cv/
+    url: /files/SanaMahmoodCV.pdf
     
   # - title: "CV"
   #   url: /cv-json/
