--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-site_theme               : "daattali/beautiful-jekyll" # Currently available options are "default", "air"
+remote_theme             : daattali/beautiful-jekyll # Currently available options are "default", "air"
 title                    : "Sana Mahmood"
 title_separator          : "-"
 name                     : &name "Sana Mahmood"
