--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@ main:
     url: /publications/
 
   - title: "Experience"
-    url: /portfolio/ 
+    url: /expeirence/ 
 
   - title: "Teaching"
     url: /teaching/    
