--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,8 +14,8 @@ main:
   - title: "Experience"
     url: /experience/ 
 
-  - title: "Teaching"
-    url: /teaching/    
+  # - title: "Teaching"
+  #   url: /teaching/    
     
   - title: "CV"
     url: /files/SanaMahmoodCV.pdf
